Removed duplication between data and object property controllers