@@ -4,120 +4,109 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.ontbrowser.www.controller.ApplicationController;
 import org.ontbrowser.www.controller.CommonContent;
-import org.ontbrowser.www.feature.entities.characteristics.Characteristic;
+import org.ontbrowser.www.feature.graph.GraphURLScheme;
 import org.ontbrowser.www.kit.OWLHTMLKit;
 import org.ontbrowser.www.model.paging.With;
-import org.ontbrowser.www.renderer.OWLHTMLRenderer;
+import org.ontbrowser.www.renderer.MOSStringRenderer;
 import org.ontbrowser.www.url.ComponentPagingURIScheme;
-import org.semanticweb.owlapi.model.OWLAnnotationProperty;
-import org.semanticweb.owlapi.model.OWLObject;
 import org.semanticweb.owlapi.model.OWLOntology;
+import org.semanticweb.owlapi.model.OWLProperty;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 
-import static org.springframework.http.HttpStatus.NOT_FOUND;
+public class OWLPropertiesController<P extends OWLProperty> extends ApplicationController {
 
-// TODO migrate to generic OWLPropertiesController
-@RestController
-@RequestMapping(value = "/annotationproperties")
-public class OWLAnnotationPropertiesController extends ApplicationController {
-
-    private final OWLAnnotationPropertiesService service;
+    private final PropertiesService<P> service;
     private final CommonContent commonContent;
+    private final Class<P> clz;
+    private final String topPropertyId;
 
-    public OWLAnnotationPropertiesController(
+    public OWLPropertiesController(
             OWLHTMLKit kit,
-            OWLAnnotationPropertiesService service,
-            CommonContent commonContent
+            PropertiesService<P> service,
+            CommonContent commonContent,
+            Class<P> clz,
+            P topProperty
     ) {
         super(kit);
         this.service = service;
         this.commonContent = commonContent;
+        this.clz = clz;
+        this.topPropertyId = kit.lookup().getId(topProperty);
     }
 
     @GetMapping(value = "/")
-    public void getOWLAnnotationPropertiesOld(
-            @ModelAttribute final OWLOntology ont,
+    public void getIndexOld(
+            @RequestParam(required = false) final String ontId,
             final HttpServletResponse response
     ) throws IOException {
-        getOWLAnnotationProperties(ont, response);
+        getIndex(ontId, response);
     }
 
     @GetMapping()
-    public void getOWLAnnotationProperties(
-            @ModelAttribute final OWLOntology ont,
+    public void getIndex(
+            @RequestParam(required = false) final String ontId,
             final HttpServletResponse response
     ) throws IOException {
-
-        List<OWLAnnotationProperty> annotationProperties
-                = service.getAnnotationProperties(ont, kit.getComparator());
-
-        if (annotationProperties.isEmpty()) {
-            throw new ResponseStatusException(NOT_FOUND, "Annotation properties not found");
-        }
-
-        OWLAnnotationProperty firstAnnotationProperty = annotationProperties.get(0);
-
-        String id = kit.lookup().getId(firstAnnotationProperty);
-
-        var ontId = String.valueOf(ont.getOntologyID().hashCode()); // TODO get this from somewhere else
-
-        response.sendRedirect("/annotationproperties/" + id+ (ontId != null ? "?ontId=" + ontId : ""));
+        String path = ServletUriComponentsBuilder.fromCurrentRequestUri().toUriString();
+        response.sendRedirect(path + "/" + topPropertyId + (ontId != null ? "?ontId=" + ontId : ""));
     }
 
     @SuppressWarnings("SameReturnValue")
     @GetMapping(value = "/{propertyId}")
-    public ModelAndView getOWLAnnotationProperty(
+    public ModelAndView getPage(
             @PathVariable final String propertyId,
-            @ModelAttribute final OWLOntology ont,
             @RequestParam(required = false, defaultValue = DEFAULT_PAGE_SIZE_STR) int pageSize,
             @RequestParam(required = false) List<With> with,
+            @ModelAttribute OWLOntology ont,
             final Model model,
             final HttpServletRequest request
     ) {
-        var prop = kit.lookup().entityFor(propertyId, ont, OWLAnnotationProperty.class);
+        var prop = kit.lookup().entityFor(propertyId, ont, clz);
 
         commonContent.addCommonContent(request.getQueryString(), model, ont);
         model.addAttribute("hierarchy", service.getHierarchyService(ont).getPrunedTree(prop));
 
-        getOWLAnnotationPropertyFragment(propertyId, ont, pageSize, with, model, request);
+        getFragment(propertyId, pageSize, with, ont, model, request);
 
         return new ModelAndView("owlentity");
     }
 
-
     @SuppressWarnings("SameReturnValue")
     @GetMapping(value = "/{propertyId}/fragment")
-    public ModelAndView getOWLAnnotationPropertyFragment(
+    public ModelAndView getFragment(
             @PathVariable final String propertyId,
-            @ModelAttribute final OWLOntology ont,
             @RequestParam(required = false, defaultValue = DEFAULT_PAGE_SIZE_STR) int pageSize,
             @RequestParam(required = false) List<With> with,
+            @ModelAttribute OWLOntology ont,
             final Model model,
-            final HttpServletRequest request) {
-
-        var prop = kit.lookup().entityFor(propertyId, ont, OWLAnnotationProperty.class);
-
-        Comparator<OWLObject> comparator = kit.getComparator();
+            final HttpServletRequest request
+    ) {
+        var prop = kit.lookup().entityFor(propertyId, ont, clz);
 
         String entityName = kit.getShortFormProvider().getShortForm(prop);
 
-        OWLHTMLRenderer owlRenderer = rendererFactory.getHTMLRenderer(ont).withActiveObject(prop);
+        var owlRenderer = rendererFactory.getHTMLRenderer(ont).withActiveObject(prop);
 
-        List<With> withOrEmpty = with != null ? with : Collections.emptyList();
+        List<With> withOrEmpty = with == null ? List.of() : with;
 
-        List<Characteristic> characteristics =
-                service.getCharacteristics(prop, ont, comparator, withOrEmpty, pageSize);
+        var characteristics = service.getCharacteristics(prop, ont, kit.getComparator(), withOrEmpty, pageSize);
 
-        model.addAttribute("title", entityName + " (Annotation Property)");
-        model.addAttribute("type", "Annotation Properties");
+        if (projectInfo.activeProfiles().contains("graph")) {
+            var mos = new MOSStringRenderer(kit.getFinder(), ont);
+            model.addAttribute("graphLink", new GraphURLScheme(mos).getURLForOWLObject(prop, ont));
+        }
+
+        model.addAttribute("title", entityName + " ( " + prop.getEntityType().getPrintName() + " )");
+        model.addAttribute("type", prop.getEntityType().getPluralPrintName());
         model.addAttribute("iri", prop.getIRI());
         model.addAttribute("characteristics", characteristics);
         model.addAttribute("ontologies", ont.getImportsClosure());
@@ -126,6 +115,7 @@ public class OWLAnnotationPropertiesController extends ApplicationController {
         model.addAttribute("pageURIScheme", new ComponentPagingURIScheme(request.getQueryString(), withOrEmpty));
 
         return new ModelAndView("owlentityfragment");
+
     }
 
     @SuppressWarnings("SameReturnValue")
@@ -135,8 +125,7 @@ public class OWLAnnotationPropertiesController extends ApplicationController {
             @ModelAttribute final OWLOntology ont,
             final Model model
     ) {
-
-        var prop = kit.lookup().entityFor(propertyId, ont, OWLAnnotationProperty.class);
+        var prop = kit.lookup().entityFor(propertyId, ont, clz);
 
         model.addAttribute("t", service.getHierarchyService(ont).getChildren(prop));
         model.addAttribute("mos", rendererFactory.getHTMLRenderer(ont));
